fix: fall block place and break when block cannot be replaced